@@ -19,9 +19,11 @@ In the context of this test, we should have a predefined engine class
 >>> IThemeEngine.implementedBy(PageEngine)
 True
 
-Let's define some string constants
->>> LINK = '<link rel="Stylesheet" type="text/css" href="document.css" />'
+Let's define the needed fragments to demonstrate:
 
+>>> head_content = """
+...     <link rel="Stylesheet" type="text/css" href="document.css" />
+...     <script src="/cpsdocument.js"> </script>"""
 >>> cps_global, thm_body = PageEngine.parseHeadBody("""
 ... <html xmlns="http://www.w3.org/1999/xhtml">
 ...  <head>
@@ -35,7 +37,7 @@ Now let's see how our sources get merged. See how the head_content
 part and cps_global parts go straight while URIs from the theme get rewritten:
 >>> engine = get_engine(PageEngine, 'theme1', page='simple_head.html',
 ...  	                cps_base_url='/cps_portal/')
->>> engine.mergeHeads(head_content=LINK, cps_global=cps_global)
+>>> engine.mergeHeads(head_content=head_content, cps_global=cps_global)
 >>> print engine.serialize() # TODO JS ordering as well
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -47,6 +49,7 @@ part and cps_global parts go straight while URIs from the theme get rewritten:
    <link href="document.css" rel="Stylesheet" type="text/css" />
    <script src="/thm_base/eye_candi.js" type="text/javascript"> </script>
    <script src="/functions.js"></script>
+   <script src="/cpsdocument.js"></script>
   </head>
   <body>
   </body>
